--- a/embedded_script_engines/v8/v8-learn/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn/v8-learn/v8-learn.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;D:\home\lugansky-igor\github\v8\include&quot;"
+				AdditionalIncludeDirectories="&quot;D:\home\lugansky-igor\github\v8\include&quot;;&quot;..\..\..\third_party\fused-src&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -174,6 +174,14 @@
 			>
 			<File
 				RelativePath=".\v8-learn.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="tools"
+			>
+			<File
+				RelativePath="..\..\..\..\third_party\fused-src\gmock-gtest-all.cc"
 				>
 			</File>
 		</Filter>
