--- a/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
+++ b/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
@@ -8,6 +8,9 @@
     <Filter Include="tools">
       <UniqueIdentifier>{b36b8744-a796-43dc-b3e1-2658118091bf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="tests">
+      <UniqueIdentifier>{b1c79e5d-a2a6-467f-a44d-1fc16ecf9bfa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\third_party\fused-src\gmock-gtest-all.cc">
@@ -15,6 +18,9 @@
     </ClCompile>
     <ClCompile Include="..\..\src\v8-learn.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\tests\v8_base_test.cc">
+      <Filter>tests</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
