--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,26 @@
-*.ncb
-*~
-*.o
-*.o.d
+*.beam
+*.cache
+*.dep
+*.dll
+*.exe
+*.exe.*
+*.idb
+*.ilk
+*.lastbuildstate
 *.log
 *.manifest
-*.ilk
+*.ncb
+*.o
+*.o.d
+*.obj
+*.opensdf
 *.pch
 *.pdb
-*.res
-*.dep
-*.idb
-*.obj
-*.exe.*
-*.beam
-*.exe
-*.dll
 *.pyc
-/deployer/dist/*
+*.res
 *.sdf
 *.tlog
-*.cache
-*.lastbuildstate
-*.opensdf
 *.user
-
-
-
+*/BuildLog.htm*
+*~
+/deployer/dist/*
