V8 samples make source.

--- a/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj
@@ -92,7 +92,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\third_party\fused-src\gmock-gtest-all.cc" />
-    <ClCompile Include="..\..\src\v8-learn.cpp" />
+    <ClCompile Include="..\..\src\launcher_process.cc" />
+    <ClCompile Include="..\..\src\process.cc" />
+    <ClCompile Include="..\..\src\process_global.cc" />
+    <ClCompile Include="..\..\src\process_test.cc" />
     <ClCompile Include="..\..\tests\v8_base_test.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
