--- a/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\third_party\fused-src\gmock-gtest-all.cc" />
     <ClCompile Include="..\..\src\launcher_process.cc" />
+    <ClCompile Include="..\..\src\point.cc" />
     <ClCompile Include="..\..\src\process.cc" />
     <ClCompile Include="..\..\src\process_global.cc" />
     <ClCompile Include="..\..\src\process_test.cc" />
