--- a/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
+++ b/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="..\..\src\script_test.cc">
       <Filter>tests</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\point.cc">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
