--- a/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
+++ b/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="..\..\src\point.cc">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\v8_wrap\v8_wrapper.cc">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
