--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;..\..\..\third_party\fused-src&quot;;&quot;C:\home\haneda\tmitter-web-service-win\components\app-server-linux&quot;;&quot;C:\home\haneda\tmitter-web-service-win\to-inner-reuse&quot;;&quot;C:\home\haneda\tmitter-web-service-win\components&quot;;&quot;C:\home\haneda\in-the-vicinity-cc\embedded_script_engines&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\..\third_party\fused-src&quot;;&quot;C:\home\haneda\tmitter-web-service-win\components\app-server-linux&quot;;&quot;C:\home\haneda\tmitter-web-service-win\to-inner-reuse&quot;;&quot;C:\home\haneda\tmitter-web-service-win\components&quot;;&quot;C:\home\haneda\in-the-vicinity-cc\embedded_script_engines&quot;;&quot;C:\home\haneda\in-the-vicinity-cc\embedded_script_engines\v8\src&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -173,7 +173,19 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\src\js_request.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\js_request.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\point.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\point_expose_test.cc"
 				>
 			</File>
 			<File
@@ -181,19 +193,23 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\process_global.cc"
+				RelativePath="..\..\src\process_test.cc"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\v8_wrap\v8_wrapper.cc"
+				RelativePath="..\..\src\test_extended\process_test_ext.cc"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\v8_wrap\v8_wrapper.h"
+				RelativePath="..\..\src\test_extended\process_test_ext_test.cc"
 				>
 			</File>
 			<File
-				RelativePath="..\..\src\v8_wrap\v8_wrapper_db.cc"
+				RelativePath="..\..\src\v8_wrapper.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\v8_wrapper_db.cc"
 				>
 			</File>
 			<File
@@ -209,24 +225,12 @@
 				>
 			</File>
 		</Filter>
-		<Filter
-			Name="tests"
-			>
-			<File
-				RelativePath="..\..\tests\database_manipulations.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\process_test.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\script_test.cc"
-				>
-			</File>
-		</Filter>
 		<File
 			RelativePath="..\..\src\launcher_process.cc"
+			>
+		</File>
+		<File
+			RelativePath="..\..\src\v8_wrapper.h"
 			>
 		</File>
 	</Files>
