Extract test for api.

--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -213,6 +213,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\v8_api_test.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\v8_wrapper.cc"
 				>
 			</File>
