Try access to inner object.

--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -236,6 +236,18 @@
 				RelativePath="..\..\src\virtual_machine.cc"
 				>
 			</File>
+			<Filter
+				Name="around_point"
+				>
+				<File
+					RelativePath="..\..\src\point\palette.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\point\palette.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="tools"
