--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -172,28 +172,80 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<Filter
+				Name="main_filter"
+				>
+				<File
+					RelativePath="..\..\src\v8small_base.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\v8small_base_engine.cc"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="v8_examples"
+				>
+				<File
+					RelativePath="..\..\src\process.cc"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="other_deprecated"
+				>
+				<File
+					RelativePath="..\..\src\js_request.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\js_request.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\v8_wrapper.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\v8_wrapper.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\v8_wrapper_db.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\virtual_machine.cc"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="point"
+				>
+				<File
+					RelativePath="..\..\src\point.cc"
+					>
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="tools"
+			>
 			<File
-				RelativePath="..\..\src\js_request.cc"
+				RelativePath="..\..\..\..\third_party\fused-src\gmock-gtest-all.cc"
 				>
 			</File>
-			<File
-				RelativePath="..\..\src\js_request.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\point.cc"
-				>
-			</File>
+		</Filter>
+		<Filter
+			Name="tests"
+			>
 			<File
 				RelativePath="..\..\src\point_engine_test.cc"
 				>
 			</File>
 			<File
 				RelativePath="..\..\src\point_expose_test.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\process.cc"
 				>
 			</File>
 			<File
@@ -212,41 +264,9 @@
 				RelativePath="..\..\src\small_base_test.cc"
 				>
 			</File>
-			<File
-				RelativePath="..\..\src\v8_wrapper.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\v8_wrapper_db.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\v8small_base.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\v8small_base_engine.cc"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\virtual_machine.cc"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="tools"
-			>
-			<File
-				RelativePath="..\..\..\..\third_party\fused-src\gmock-gtest-all.cc"
-				>
-			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\src\launcher_process.cc"
-			>
-		</File>
-		<File
-			RelativePath="..\..\src\v8_wrapper.h"
 			>
 		</File>
 	</Files>
