--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -236,6 +236,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\src\point\palette_engine.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\src\point\palette_engine_test.cc"
 					>
 				</File>
