--- a/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj
@@ -107,6 +107,7 @@
     <ClCompile Include="..\..\src\v8_wrapper.cc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\point\palette_engine.h" />
     <ClInclude Include="..\..\src\point\point_engines.h" />
     <ClInclude Include="..\..\src\test_extended\process_test_ext.h" />
   </ItemGroup>
