--- a/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
+++ b/embedded_script_engines/v8/v8-learn-vsee2010/v8-learn/v8-learn.vcxproj.filters
@@ -64,5 +64,8 @@
     <ClInclude Include="..\..\src\point\point_engines.h">
       <Filter>src\point</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\point\palette_engine.h">
+      <Filter>src\point</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
