Need make forge and blueprint maker.

--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -284,6 +284,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="auto"
+				>
+				<File
+					RelativePath="..\..\..\tools\forge_v8_point.cc"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\..\src\launcher_process.cc"
