--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -212,6 +212,10 @@
 				Name="around_point"
 				>
 				<File
+					RelativePath="..\..\src\point\forge_v8_points.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\src\point\palette.cc"
 					>
 				</File>
