Try compile wrapper for arrays.

--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -232,6 +232,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="auto"
+				>
+				<File
+					RelativePath="..\..\..\tools\odata\arrays.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\tools\odata\arrays.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="tools"
