--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -251,6 +251,14 @@
 					RelativePath="..\..\..\tools\test-data\real_test_file.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\tools\idata\v8_sampler.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\tools\idata\v8_sampler.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
