--- a/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
+++ b/embedded_script_engines/v8/v8-learn-vsee2008/v8-learn/v8-learn.vcproj
@@ -252,11 +252,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\tools\idata\v8_sampler.cc"
+					RelativePath="..\..\..\tools\idata\sampler_v8.cc"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\tools\idata\v8_sampler.h"
+					RelativePath="..\..\..\tools\idata\sampler_v8.h"
 					>
 				</File>
 			</Filter>
